--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "basic-setup",
+  "name": "rxjs-basic-",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack serve --open --port=8081"
+    "start": "webpack serve --mode development --open --port=8081"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,6 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "rxjs": "^7.4.0"
   }
 }
